tests/positive/Inductive.juvix
module Inductive;

type T := t : T;

open T using {t} public;
