tests/negative/DuplicateClause.juvix
module DuplicateClause;

axiom T : Type;

id : T → T := λ {t := t};
id t := t;

